<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_gradient"
    android:clipToPadding="false"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    tools:context=".AddFragments.FragmentAboutProgram">


    <LinearLayout
        android:id="@+id/containerBack"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_container"
        android:clipToPadding="false"
        android:elevation="@dimen/elevation"

        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow" />

            <TextView
                style="@style/BaseTextView"

                android:text="@string/register_back"
                android:textSize="@dimen/back_size_text" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            style="@style/BaseTextView"

            android:text="@string/about_program"
            android:textSize="@dimen/back_size_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"

        android:background="@drawable/item_product_home_back"
        android:elevation="@dimen/elevation"
        android:orientation="vertical"
        android:paddingStart="10dp"

        android:paddingTop="5dp"
        android:paddingEnd="10dp"

        android:paddingBottom="5dp">

        <TextView
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/setting_text_about_program" />

        <TextView
            android:id="@+id/settingInstuction"
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/about_instruction" />


        <TextView
            android:id="@+id/settingAboutAuthor"
            style="@style/SettingView"
            android:text="@string/setting_about_author" />


    </LinearLayout>

</LinearLayout>


