<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:clipToPadding="false"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    android:paddingStart="35dp"
    android:paddingTop="50dp"

    android:paddingEnd="35dp"
    tools:context=".MainFragments.FragmentProfile">

    <LinearLayout
        android:id="@+id/profileInf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:cardCornerRadius="50dp"
            app:cardElevation="@dimen/elevation">

            <ImageView
                android:id="@+id/imageProf"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:background="@color/light_gray"
                android:paddingStart="@dimen/ava_placeholder_padding_lr"

                android:paddingTop="@dimen/ava_placeholder_padding_top"
                android:paddingEnd="@dimen/ava_placeholder_padding_lr"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userName"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"

            android:fontFamily="@font/roboto"
            android:text="@string/example_profile_nikname"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:background="@drawable/item_product_home_back"
        android:elevation="@dimen/elevation"
        android:orientation="vertical"
        android:paddingStart="10dp"

        android:paddingTop="5dp"
        android:paddingEnd="10dp"

        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/settingAboutPerson"
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/setting_about_person" />

        <TextView
            android:id="@+id/settingMyProducts"
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/setting_my_products" />

        <TextView
            android:id="@+id/settingAboutProgram"
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/setting_about_program" />

        <TextView
            android:id="@+id/settinglogOut"
            style="@style/SettingView"
            android:gravity="center_horizontal"
            android:text="@string/setting_log_out"
            android:textColor="@color/red" />


    </LinearLayout>

</LinearLayout>


