<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_gradient"
    android:clipToPadding="false"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    tools:context=".AddFragments.FragmentAboutAuthor">

    <LinearLayout
        android:id="@+id/containerBack"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_container"
        android:clipToPadding="false"
        android:elevation="@dimen/elevation"

        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow" />

            <TextView
                style="@style/BaseTextView"

                android:text="@string/register_back"
                android:textSize="@dimen/back_size_text" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/saveProduct"
            style="@style/BaseTextView"

            android:text="@string/about_author"
            android:textSize="@dimen/back_size_text" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:cardCornerRadius="50dp"
            app:cardElevation="@dimen/elevation">

            <ImageView
                android:id="@+id/imageAuthor"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:background="@color/light_gray"
                android:paddingStart="@dimen/ava_placeholder_padding_lr"

                android:paddingTop="@dimen/ava_placeholder_padding_top"
                android:paddingEnd="@dimen/ava_placeholder_padding_lr"
                android:scaleType="fitXY"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userName"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"

            android:fontFamily="@font/roboto"
            android:text="@string/author_name"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"

        android:background="@drawable/item_product_home_back"
        android:elevation="@dimen/elevation"
        android:orientation="vertical"
        android:paddingStart="10dp"

        android:paddingTop="5dp"
        android:paddingEnd="10dp"

        android:paddingBottom="5dp">

        <TextView
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/author_group" />

        <TextView
            style="@style/SettingView"
            android:background="@drawable/bottom_line"
            android:text="@string/author_year_dev" />

        <TextView
            style="@style/SettingView"
            android:text="@string/author_email" />

    </LinearLayout>

</LinearLayout>


