<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainFragments.FragmentBucket">

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="10dp"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"

            android:padding="0dp"
            android:text="@string/register_back"
            android:textSize="@dimen/back_size_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="20dp"

        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <TextView
            android:id="@+id/delChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/bucket_del_all_checked"
            android:textSize="@dimen/common_size_text" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layoutDirection="rtl"
            android:text="@string/bucket_checkbox_title"
            android:textSize="@dimen/common_size_text"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="59dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="10dp"

        app:layout_constraintBottom_toTopOf="@+id/addLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlLayout"
        tools:listitem="@layout/item_product_my" />

    <LinearLayout
        android:id="@+id/addLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"

        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/countCheck"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:text="@string/example_my_count"
            android:textSize="@dimen/pay_size_text" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addProduct"

            style="@style/ButtonLight"
            android:text="@string/my_btn_add" />

    </LinearLayout>

    <TextView
        android:id="@+id/placeholderEmpty"
        style="@style/BaseTextView"

        android:gravity="center"
        android:paddingStart="10dp"

        android:paddingEnd="10dp"
        android:text="@string/my_product_placeholder_empty"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>