<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainFragments.FragmentBucket">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainFragments.FragmentBucket">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/delChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/bucket_del_all_checked"
                android:textSize="@dimen/common_size_text" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layoutDirection="rtl"
                android:text="@string/bucket_checkbox_title"
                android:textSize="@dimen/common_size_text" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recView"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"

            tools:listitem="@layout/item_product_bucket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"

            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/resPayment"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto"
                android:text="@string/example_bucket_price"
                android:textSize="@dimen/pay_size_text" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPay"

                style="@style/ButtonLight"
                android:text="@string/bucket_button_pay" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/placeholderEmpty"
        style="@style/BaseTextView"

        android:gravity="center"
        android:paddingStart="10dp"

        android:paddingEnd="10dp"
        android:text="@string/bucket_placeholder_empty"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>